<resources>
    <string name="app_name">Quiz App</string>
    <string name="feedbackname">Name</string>
    <string name="welcome_message">Hello there \:D \nLet\'s have some fun!</string>
    <string name="ques_1">Question 1</string>
    <string name="ques_2">Question 2</string>
    <string name="ques_3">Question 3</string>
    <string name="ques_4">Question 4</string>
    <string name="ques_5">Question 5</string>
    <string name="ques_6">Question 6</string>
    <string name="ques_1_text">Complete the sentence\: \n\"Great minds think alike…\"</string>
    <string name="ques_2_text">Which company this logo belongs to\:</string>
    <string name="ques_3_text">Which modules are included in the Android Nanodegree\:</string>
    <string name="ques_4_text">Complete the sentence\: \n\"I destroy my enemies when I …\" - Abraham Lincoln</string>
    <string name="ques_6_text">Which of the people below are involved in the Nanodegree\?</string>
    <string name="ques_5_text">The Android Basics Nanodegree was developed in collaboration with which company\?</string>
    <string name="ques_hint">Answer</string>
    <string name="ques_2_but1">Udemy</string>
    <string name="ques_2_but2">Udacity</string>
    <string name="ques_2_but3">University of the People</string>
    <string name="ques_3_but1">Multi-screen Apps</string>
    <string name="ques_3_but2">User Input</string>
    <string name="ques_3_but3">Swift for Beginners</string>
    <string name="ques_3_but4">Data Storage</string>
    <string name="ques_6_but1">Chris Lei</string>
    <string name="ques_6_but2">Kunal Chawla</string>
    <string name="ques_6_but3">Katherine Kuan</string>
    <string name="ques_6_but4">Lyla Fujiwara</string>
    <string name="ques_5_but1">nVidia</string>
    <string name="ques_5_but2">Apple</string>
    <string name="ques_5_but3">Google</string>
    <string name="submitButton">Check answers</string>
    <string name="toast_p1">Your score is </string>
</resources>
